# src/model/custom-event.model.ts
@@ -1,9 +1,9 @@
 export interface CustomEvent {
-    eventName: `customEvent${string}`,
-    attributes: {
-        'action_type': string, 
-        'category': string,           
-        'label': string,             
-        'metadata': Record<string, any>
-    }
+  eventName: `customEvent${string}`;
+  attributes: {
+    action_type: string;
+    category: string;
+    label: string;
+    metadata: Record<string, any>;
+  };
 }
